# template_benchmark

./: CMakeLists.txt  benchmark.cpp  setup.cmake
.github/workflows/: build_and_test.yml
cmake/: deps.cmake
